--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8695,6 +8695,18 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  por_unlock_mon_decisions_tt:0 "Unlocks §YExpand Autocratic Influence§! Sub-Decisions."
  POR_empower_the_carbonaria:0 "Empower the Carbonária"
  POR_empower_the_carbonaria_desc:0 ""
+ POR_attract_the_small_and_medium_bourgeoisie:0 "Attract the Small and Medium Bourgeoisie"
+ POR_attract_the_small_and_medium_bourgeoisie_desc:0 ""
+ POR_poison_paiva_couceiro:0 "Poison Paiva Couceiro"
+ POR_poison_paiva_couceiro_desc:0 ""
+ POR_curb_machado_santos_influence:0 "Curb Machado Santos' Influence"
+ POR_curb_machado_santos_influence_desc:0 ""
+ POR_deploy_garrison_troops_in_lisbon:0 "Deploy Garrison Troops in Lisbon"
+ POR_deploy_garrison_troops_in_lisbon_desc:0 ""
+
+ POR_operation_guarnicao:0 "Operation Guarnição"
+ POR_operation_guarnicao_desc:0 ""
+
  POR_colonial_sphere:0 "The Colonial Sphere"
  POR_colonial_sphere_desc:0 ""
  POR_colonial_forced_labor_tt:0 "Will add the §YColonial Forced Labor§! state-modifier in all current colonial states."
