--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9529,12 +9529,14 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_portugal.33.a: "Vis Unita Maior Nunc et Semper"
 
  ww1_portugal.34.t: "End of the Chokwe Dominance"
- ww1_portugal.35.t: "Decree on Forced Labor Passed"
+ ww1_portugal.35.t: "Policy on Indigenous Labour Passed"
  ww1_portugal.36.t: "Spreading Our Ideals"
  ww1_portugal.37.t: "The Sale of Niassa Shares"
  ww1_portugal.38.t: "Demand Centralization in Mbunda"
  ww1_portugal.39.t: "The Cordes Offensive"
  ww1_portugal.40.t: "Commencement of Pacification Operations"
+ ww1_portugal.41.t: "The Future of Portugal"
+ ww1_portugal.42.t: "Whispers in Lisbon"
 
  ww1_portugal_news.1.t: "Revolution in Portugal"
  ww1_portugal_news.1.d_republic: "Mirroring their former colony, Brazil, the Republicans of Portugal have couped the monarchy. A string of blunders by the Monarchy, mostly concerning the colonies and technological development, provoked a very small band of rebels to come together, which quickly earned the support of nearly the entire military.\n\nThough the issues the Monarchy faced are unlikely to be easily solved any time soon, at least the anger of the public is quenched, for now."
