--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10820,12 +10820,38 @@ POR_monarchy_till_death:0 "Monarchy Till Death"
 POR_monarchy_till_death_desc:0 "The vile republicans have been a thorn in our side for too long. They shall be punished for their murder of our dear Carlos I and Prince Luis Filipe. "
 POR_looming_insurrection:0 "Looming Insurrection"
 POR_looming_insurrection_desc:0 ""
-POR_republican_revolt:0 "Republican Revolt"
+POR_looming_insurrection_tt:0 "The rebels will try to organise an operation to §Ysteal a large part§! of the weapon stockpile."
+POR_republican_revolt:0 "The Republican Revolt"
 POR_republican_revolt_desc:0 ""
 POR_aid_counterrevolutionaries:0 "Aid Counter-Revolutionaries"
 POR_aid_counterrevolutionaries_desc:0 ""
 POR_pillar_of_democracy:0 "Pillar of Democracy"
 POR_pillar_of_democracy_desc:0 ""
+POR_popular_way:0 "Popular Way"
+POR_popular_way_desc:0 ""
+POR_popular_way_tt:0 "The §YChamber of Deputies§! will be replaced with the §YNational Constituent Assembly§!"
+POR_follow_the_prominent_movement:0 "Follow the Prominent Movement"
+POR_follow_the_prominent_movement_desc:0 ""
+POR_interim_republic:0 "The Interim Republic"
+POR_interim_republic_desc:0 ""
+POR_fractured_society:0 "A Fractured Society"
+POR_fractured_society_desc:0 ""
+POR_law_of_separation_of_church_and_state:0 "Lei da Separação"
+POR_law_of_separation_of_church_and_state_desc:0 ""
+POR_seize_clerical_property:0 "Seize Clerical Property"
+POR_seize_clerical_property_desc:0 ""
+POR_compose_republican_constitution:0 "Compose The Republican Constitution"
+POR_compose_republican_constitution_desc:0 ""
+POR_parliamentary_regime:0 "Parliamentarism"
+POR_parliamentary_regime_desc:0 ""
+POR_countryside_support:0 ""
+POR_countryside_support_desc:0 ""
+POR_stabilize_unions:0 ""
+POR_stabilize_unions_desc:0 ""
+POR_bragas_legacy:0 ""
+POR_bragas_legacy_desc:0 ""
+POR_voice_of_arriga:0 ""
+POR_voice_of_arriga_desc:0 ""
 
 POR_lisbon_calling:0 "Lisbon's Calling"
 POR_lisbon_calling_desc:0 ""
