--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -3123,6 +3123,8 @@ FRA_colonial_conscription:0 "Colonial Conscription"
 # Portugal
 POR_the_unstable_crown:0 "The Unstable Crown"
 POR_the_unstable_crown_desc:0 "Ever since the beginning of the Charter Monarchy, many challenges have risen to cause chaos and instability within the Portuguese Realm. More recently, the increased activity of Republican forces has left the country in utter disarray, which was portrayed with the 1908 Lisbon Regicide which left our kingdom without its king, and the eventual arrival of Manuel II to the throne. Although many reforms have been passed in order to democratize the already weak monarchy, it seems as if the Republican influence will never fade away till they overtake the nation."
+POR_the_unstable_crown_1:0 "The Unstable Crown"
+POR_the_unstable_crown_1_desc:0 "Ever since the beginning of the Charter Monarchy, many challenges have risen to cause chaos and instability within the Portuguese Realm. More recently, the increased activity of Republican forces has left the country in utter disarray, which was portrayed with the 1908 Lisbon Regicide which left our kingdom without its king, and the eventual arrival of Manuel II to the throne. Although many reforms have been passed in order to democratize the already weak monarchy, it seems as if the Republican influence will never fade away till they overtake the nation."
 POR_declining_nation:0 "Declining Nation"
 POR_declining_nation_desc:0 "For a century, Portugal has faced severe challenges starting with its regional instability after the Peninsular War, which left a majority of its territory completely burned to ashes. Alongside other factors such as the weak central government and a slow industrial modernization, the country now faces a critical situation to bring order and restore governmental stability, albeit facing many changes."
 POR_anti_monarchist_sentiments:0 "Anti-Monarchist Sentiments"
@@ -3135,6 +3137,10 @@ POR_incompetent_military_force:0 "Incompetent Exército Português"
 POR_incompetent_military_force_desc:0 "It seems as if the Portuguese Armed Forces, the 'Exército Português', has yet to evolve with the standards of other regional powers and effectively assert its influence over its colonial sphere. This proves to be particularly dangerous with the rising amount of instability and chaos throughout the country as well as the ever-increasing possibility of a Spanish invasion of the Portuguese territory. In addition, many concerns have been raised as recent replacements in the army have led to an increased rise of extremists and nationalists like never seen before, which could prove fatal for the liberalization efforts already being made by the King."
 ANG_widespread_famine:0 "Widespread Famine"
 ANG_widespread_famine_desc:0 ""
+POR_republican_protests:0 "City-wide Republican Protests"
+POR_republican_protests_desc:0 ""
+POR_action_against_mutiny:0 "Action Against Mutiny"
+POR_action_against_mutiny_desc:0 ""
 
  #Monaco
  MCO_monte_carlo_casino:0 "Monte Carlo Casino"
