--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -1134,7 +1134,7 @@ ROM_titu_maiorescu:0 "Titu Maiorescu"
 ROM_tudor_arghezi:0 "Tudor Arghezi"
 ROM_george_bibescu_air:0 "George Bibescu"
 ROM_henri_coanda_air:0 "Henri Coandă"
-
+ROM_gala_galaction:0 "Gala Galaction"
 
 
 
