--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -244,6 +244,21 @@ ww1_germanrework.47.t:0 "Falkenhayn Removed as Chief of the Army"
  ww1_germanrework.47.d:0 ""
  ww1_germanrework.47.a:0 "Well good luck to Hindenburg"
 
+#1911 Prussian House of Representatives Election
+ww1_germanrework.49.t:0 "Prussian House Election"
+ ww1_germanrework.49.d:0 ""
+ ww1_germanrework.49.a:0 "Well good luck to him then"
+
+#Hermann Von Effra death
+ww1_germanrework.50.t:0 "Hermann Von Effra Dies"
+ ww1_germanrework.50.d:0 ""
+ ww1_germanrework.50.a:0 "Sad to hear"
+
+#Elections for President of the Reichstag
+ww1_germanrework.51.t:0 "Elections for President of the Reichstag"
+ ww1_germanrework.51.d:0 ""
+ ww1_germanrework.51.a:0 "Johannes Kaempf is chosen"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
