--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -314,6 +314,7 @@
  proto_fascist:0 "Proto-Fascist"
  armoured_warfare_theorist:0 "Armoured Warfare Theorist"
  afrika_herzog:0 ""Der Afrika-Herzog""
+ agricultural_minister:0 "Agricultural Minister"
  liberal_economist:0 "Liberal Economist"
  LIB_puppet_of_barclay:0 "§OPuppet of Arthur Barclay§!"
  strong_woman_of_the_italian_socialism:0 "Strong Woman of the Italian Socialism"
