--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -505,6 +505,10 @@ ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 ROM_romanian_hungarian_war_focus:0 "The War Against Socialism"
 ROM_recall_romanian_engineers:0 "Recall [ROM.GetAdjective] Engineers"
 ROM_recall_romanian_engineers_desc:0 "A bunch of [ROM.GetAdjective] aircraft engineers are located in [FRA.GetName] or other Western European countries right now. We can recall them back to [ROM.GetName] for their service as air chiefs."
+ROM_unification_with_moldova:0 "Unification with Moldova"
+ROM_fund_the_viata_romaneasca:0 "Fund the Viata Româneasca"
+ROM_fund_the_viata_romaneasca_desc:0 "The Viata Româneasca is a socialist newspaper co-founded by Constantin Stere, used to promote socialist and poporanist ideals to the readers in Romania and other places. Now that Constantin is in charge of the government, he can fund the newspaper through his occupation."
+ROM_tax_burdens_on_the_rich:0 "Tax Burdens on the Rich"
 ## -- TOOLTIPS -- ##
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
@@ -615,7 +619,7 @@ kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §Y
 ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania now exits the war."
 ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
 ROM_more_likely_if_thing.tt:0 "§WThey will be §Y§Gmore likely§G§W to accept if:\n- Has a high opinion of us\n- Is in a faction with us\n- Is fighting a war together"
-
+ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-5.0%§Y§W\n£construction_speed_texticon Construction Speed:§W §G+5.00%§G§W \n£stability_texticon Gain Base Stability:§W§G +2.50%§G§W\n£political_power_cost_texticon Daily Political Power Gain:§W§R -0.15§R§W"
 
 
 ### -- EVENTS -- ##
