--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10823,6 +10823,7 @@ POR_looming_insurrection_desc:0 ""
 POR_looming_insurrection_tt:0 "The rebels will try to organise an operation to §Ysteal a large part§! of the weapon stockpile."
 POR_republican_revolt:0 "The Republican Revolt"
 POR_republican_revolt_desc:0 ""
+POR_republican_revolt_tt:0 "The §GRepublican Party§! will start a §Rrevolution§! by staging a coup against the monarchy in §YLisbon§! and §YPorto§!."
 POR_aid_counterrevolutionaries:0 "Aid Counter-Revolutionaries"
 POR_aid_counterrevolutionaries_desc:0 ""
 POR_pillar_of_democracy:0 "Pillar of Democracy"
@@ -10842,15 +10843,15 @@ POR_seize_clerical_property:0 "Seize Clerical Property"
 POR_seize_clerical_property_desc:0 ""
 POR_compose_republican_constitution:0 "Compose The Republican Constitution"
 POR_compose_republican_constitution_desc:0 ""
-POR_parliamentary_regime:0 "Parliamentarism"
-POR_parliamentary_regime_desc:0 ""
-POR_countryside_support:0 ""
+POR_stabilize_trade_unions:0 "Stabilize Trade Unions"
+POR_stabilize_trade_unions_desc:0 ""
+POR_countryside_support:0 "Pursue Countryside Support"
 POR_countryside_support_desc:0 ""
-POR_stabilize_unions:0 ""
-POR_stabilize_unions_desc:0 ""
-POR_bragas_legacy:0 ""
-POR_bragas_legacy_desc:0 ""
-POR_voice_of_arriga:0 ""
+POR_bicameralism_legislature:0 "Bicameralism Legislature"
+POR_bicameralism_legislature_desc:0 ""
+POR_side_with_radical_republicans:0 "Side with the Radical Republicans"
+POR_side_with_radical_republicans_desc:0 ""
+POR_voice_of_arriga:0 "The Voice of Arriga"
 POR_voice_of_arriga_desc:0 ""
 
 POR_lisbon_calling:0 "Lisbon's Calling"
@@ -10901,7 +10902,7 @@ POR_mappa_d_africa_ambitions:0 "Mappa D'Africa Ambitions"
 POR_mappa_d_africa_ambitions_desc:0 ""
 POR_the_iberian_proposal:0 "The Iberian Proposal"
 POR_the_iberian_proposal_desc:0 ""
-POR_one_idea_two_states:0 "One Idea Two States"
+POR_one_idea_two_states:0 "One Idea, Two States"
 POR_one_idea_two_states_desc:0 ""
 POR_pan_iberian_solidarity:0 "Pan Iberian Solidarity"
 POR_pan_iberian_solidarity_desc:0 ""
