Germany demands Angola event chain

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -259,6 +259,90 @@ ww1_germanrework.51.t:0 "Elections for President of the Reichstag"
  ww1_germanrework.51.d:0 ""
  ww1_germanrework.51.a:0 "Johannes Kaempf is chosen"
 
+#Portugals "Debt" Event Chain
+#Germany asks for UK support for pressuring Portugal to give over Angola to Germany
+ww1_germanrework.52.t:0 "A request from Germany"
+ ww1_germanrework.52.d:0 ""
+ ww1_germanrework.52.a:0 "Sure, we will help"
+ ww1_germanrework.52.b:0 "Hell no!"
+#UK Accepted to help Germany
+ww1_germanrework.53.t:0 "The British Accepted"
+ ww1_germanrework.53.d:0 ""
+ ww1_germanrework.53.a:0 "Great!"
+#UK Rejected to help Germany
+ww1_germanrework.54.t:0 "The British Rejected"
+ ww1_germanrework.54.d:0 ""
+ ww1_germanrework.54.a:0 "Insanity"
+#Portugal gets the Demands
+ww1_germanrework.55.t:0 "Germany Demands Angola"
+ ww1_germanrework.55.d:0 ""
+ ww1_germanrework.55.a:0 "We have no choice"
+ ww1_germanrework.55.b:0 "Call the French for help immediately"
+#Germany is informed Portugal Accepted
+ww1_germanrework.56.t:0 "Portugal Gave Angola"
+ ww1_germanrework.56.d:0 ""
+ ww1_germanrework.56.a:0 "A glorious diplomatic victory!"
+#UK is informed Portugal Accepted
+ww1_germanrework.57.t:0 "Portugal Gave Germany Angola"
+ ww1_germanrework.57.d:0 ""
+ ww1_germanrework.57.a:0 "Crisis solved"
+#Germany and UK are informed Portugal rejected and sent France diplomats
+ww1_germanrework.58.t:0 "Portugal sent diplomats to France"
+ ww1_germanrework.58.d:0 ""
+ ww1_germanrework.58.a:0 "Lets hope this doesn't escalate..."
+#France gets asked by Portugal to help
+ww1_germanrework.59.t:0 "Portuguese diplomats arrive in Paris"
+ ww1_germanrework.59.d:0 ""
+ ww1_germanrework.59.a:0 "We must protect Portugal!"
+ ww1_germanrework.59.b:0 "Who cares?"
+#France accepts to help, Germany has a choice to back down or not
+ww1_germanrework.60.t:0 "Portugal gets French Support!"
+ ww1_germanrework.60.d:0 ""
+ ww1_germanrework.60.a:0 "We won't back down!"
+ ww1_germanrework.60.b:0 "We have no choice"
+#France rejects to help, Portugal forced to back down
+ww1_germanrework.61.t:0 "France refuses to help!"
+ ww1_germanrework.61.d:0 ""
+ ww1_germanrework.61.a:0 "We must back down"
+#UK asked if they'll join Germany against France
+ww1_germanrework.62.t:0 "Germany asks for help against France"
+ ww1_germanrework.62.d:0 ""
+ ww1_germanrework.62.a:0 "We must help our ally"
+ ww1_germanrework.62.b:0 "No way"
+#UK told of Germany backing down
+ww1_germanrework.63.t:0 "Germany backs down"
+ ww1_germanrework.63.d:0 ""
+ ww1_germanrework.63.a:0 "Well that's sorted"
+#Portugal and France told of Germany backing down
+ww1_germanrework.64.t:0 "Germany backs down"
+ ww1_germanrework.64.d:0 ""
+ ww1_germanrework.64.a:0 "Great!"
+#Germany told about Portugal backing down due to no French Support
+ww1_germanrework.65.t:0 "Portugal backs down"
+ ww1_germanrework.65.d:0 ""
+ ww1_germanrework.65.a:0 "A glorious diplomatic victory!"
+#UK told about Portugal backing down due to no French Support
+ww1_germanrework.66.t:0 "Portugal backs down"
+ ww1_germanrework.66.d:0 ""
+ ww1_germanrework.66.a:0 "Crisis Solved"
+#News event about Germany and UK war with France
+ww1_germanrework.67.t:0 "War breaks out in Europe!"
+ ww1_germanrework.67.d:0 ""
+ ww1_germanrework.67.a:0 "A war to end all wars"
+#Germany informed of British backstab
+ww1_germanrework.68.t:0 "[ENG.GetName] refuses to help us"
+ ww1_germanrework.68.d:0 ""
+ ww1_germanrework.68.a:0 "We cannot back down now!"
+ ww1_germanrework.68.b:0 "We have no choice"
+#Germany continues war without the British
+ww1_germanrework.69.t:0 "Germany starts war with France!"
+ ww1_germanrework.69.d:0 ""
+ ww1_germanrework.69.a:0 "Can Germany win?"
+#Germany backs down after UK backstab
+ww1_germanrework.70.t:0 "Germany backs down to France"
+ ww1_germanrework.70.d:0  ""
+ ww1_germanrework.70.a:0 "An unexpected betrayl"
+
 #The Zabern Affair
 #A Crisis Stirs
 ww1_germanrework.26.t:0 "A Crisis Stirs"
