Test GUI and decisions for the Bundesrat

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9444,16 +9444,31 @@ german_region_saxe_coburg_desc:0 "§YSaxe-Coburg and Gotha§! has §Y1 Votes§! 
 german_region_saxe_altenburg:0 "§YDuchy of Saxe-Altenburg§!"
 german_region_saxe_altenburg_desc:0 "§YSaxe-Altenburg§§! has §Y1 Votes§! in the §YBundesrat§!."
 
-german_hanseatic_cities_bremen:0 "§YFree Hanseatic City of Bremen§!"
-german_hanseatic_cities_bremen_desc:0 "§YBremen§! has §Y1 Votes§! in the §YBundesrat§!."
-
-german_hanseatic_cities_hamburg:0 "§YFree and Hanseatic City of Hamburg§!"
-german_hanseatic_cities_hamburg_desc:0 "§YHamburg§§! has §Y1 Votes§! in the §YBundesrat§!."
-
-german_hanseatic_cities_lubeck:0 "§YFree and Hanseatic City of Lübeck§!"
-german_hanseatic_cities_lubeck_desc:0 "§YLübeck§! has §Y1 Votes§! in the §YBundesrat§!."
-
 GER_region_description_tt:0 "[GER_region_description_tt]"
 GER_region_description_desc:0 "[GER_region_description]"
+
+GER_region_parliament_desc_votes: "We can count on [getGermanBundesratMajority]/[getGermanBundesratTotal] MPs to vote for our proposals"
+
+parliament_text_ger_total_green: "[?ger_total_loyalist_count|0G]"
+parliament_text_ger_total_red: "[?ger_total_loyalist_count|0R]"
+
+GER_modify_influence_points_tt: "Changes number of §Yinfluence points§! by §Y[?ger_modify_influence_points_var]§!.\n"
+GER_modify_total_loyalist_count_tt: "Changes number of §Yloyal MPs§! by §Y[?ger_modify_total_loyalist_count_var]§!.\n"
+
+decision_cost_3_influence: "§Y3§! §CInfluence Points§!"
+decision_cost_3_influence_blocked: "§Y3§! §CInfluence Points§!"
+decision_cost_3_influence_tooltip: "It costs §Y3§! §Cinfluence points§! to sway this state"
+decision_cost_2_influence: "§Y2§! §Cinfluence points§!"
+decision_cost_2_influence_blocked: "§Y2§! §CInfluence points§!"
+decision_cost_2_influence_tooltip: "It costs §Y2§! §Cinfluence points§! to sway this state"
+decision_cost_4_influence: "§Y4§! §CInfluence points§!"
+decision_cost_4_influence_blocked: "§Y4§! §CInfluence Points§!"
+decision_cost_4_influence_tooltip: "It costs §Y4§! §Cinfluence points§! to sway this state"
+decision_cost_6_influence: "§Y6§! §CInfluence points§!"
+decision_cost_6_influence_blocked: "§Y6§! §CInfluence Points§!"
+decision_cost_6_influence_tooltip: "It costs §Y6§! §Cinfluence points§! to sway this state"
+decision_cost_8_influence: "§Y8§! §CInfluence points§!"
+decision_cost_8_influence_blocked: "§Y8§! §CInfluence Points§!"
+decision_cost_8_influence_tooltip: "It costs §Y8§! §Cinfluence points§! to sway this state"
 
 DEN_ICE_act_of_union:0 "@DEN @ICE Danish–Icelandic Act of Union"
