--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -198,7 +198,7 @@
  ww1_bruderkrieg.16.d: "[GER.GetNameDefCap] has rejected the Austrian surrender terms, instead seeking total victory. It is now or never, [AUH.GetName] must defend themselves to the last and hope for intervention from the other Great Powers to succeed. They need a miracle."
  ww1_bruderkrieg.16.a: "Europe in flames."
  ww1_bruderkrieg.17.t: "Austrian Endsieg?"
- ww1_bruderkrieg.17.d: "We are on our last legs. But there is a light in the darkness. Potential French intervention has put  pressure on Germany, and they have begun to withdraw troops from our frontlines in order to reinforce Alcase-Lorraine. Entente diplomats have told our government that we need only send a telegram and [FRA.GetNameDef] will march. Do we accept their offer, or do we fight to our last hurrah, alone?"
+ ww1_bruderkrieg.17.d: "We are on our last legs. But there is a light in the darkness. Potential French intervention has put  pressure on Germany, and they have begun to withdraw troops from our frontlines in order to reinforce Alsace-Lorraine. Entente diplomats have told our government that we need only send a telegram and [FRA.GetNameDef] will march. Do we accept their offer, or do we fight to our last hurrah, alone?"
  ww1_bruderkrieg.17.a: "Triggering a war to end all wars..."
  ww1_bruderkrieg.17.b: "We stand alone, and we shall be victorious alone!"
  
