--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -623,7 +623,7 @@ ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon 
 
 
 ### -- EVENTS -- ##
-
+ww1_developer_note.88.t:0 ""
 ww1_romania.78.t:0 "The 'Swamp' Demand Protection"
 ww1_romania.78.d:0 "The so-called swamp of Romanian politics, consisting of unelected appointed government positions, often in which jobs are given to friends and family, are opposing our governments campaign to help reduce corruption in government. Those in the PNL in particular are demanding protection from these efforts, and are threatening to oppose our government if we don't"
 ww1_romania.78.a:0 "We can make some exceptions"
@@ -1025,14 +1025,22 @@ ROM_recently_raided:0 "Recently Raided"
 
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
-ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: §Rinfluential§!, in §Ropposition§! to §YCarp§!\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: §Rorganized§! in complete §Ropposition§! to §YCarp§!\n\nThe §mPCD§! is currently: §Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!\n\nThe peasants are currently: generally apathetic, neither standing in §Gsupport§! or §Ropposition§!"
+ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: [old_guard_status]\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: §Rorganized§! in complete §Ropposition§! to §YCarp§!\n\nThe §mPCD§! is currently: §Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!\n\nThe §Cpeasants§! are currently: [peasant_status]"
+ROM_peasants_bad:0 "generally apathetic, neither standing in §Gsupport§! or §Ropposition§!"
+ROM_peasants_ally:0 "§Gsupportive§! of §YCarp§!"
+ROM_peasants_become:0 "The §Cpeasants§! will become §Gsupportive§! of §YCarp§!"
 ROM_socialists_bad:0 "Actively §Rprotesting§! against us"
+ROM_old_guard_bad:0 "§ROpposed§! to §YCarp§!"
+ROM_old_guard_crushed:0 "§GPolitically isolated§!"
+ROM_old_guard_ally:0 "begrudgingly §Gaccepting§! of §YCarps§! rule§!"
+
 ROM_socialists_ally:0 "§GSupporting§! §YCarp§!"
 ROM_socialist_crushed:0 "§GNot a source of concern§!"
 ROM_socialist_ally_focus:0 "The §rPDSR§! will become §Gsupportive§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
 ROM_socialist_crush_focus:0 "The §rPDSR§! will become §Gnot a source of concern§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
 ROM_old_guard_crush_focus:0 "The §qOld Guard§! will become §Gpolitically isolated§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §G+5%§!\nStability: §R-10.00%§!"
 ROM_strong_arm_focus:0 "Modify §Y'National Opposition§! by:\nPolitical Power Gain: §G+10%§!"
+ROM_peasant_focus:0 "Modify §Y'National Opposition§! by:\nStability: §G+10.00%§!"
 
 
 ROM_old_guard_ally_focus:0 "The §qOld Guard§! will begrudgingly §Gaccept Carps rule§!, nullifying an enemy of the government.\nModify §Y'National Opposition§! by:\nPolitical Power Gain: §R-5%§!\nStability: §G+15.00%§!"
