--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -490,9 +490,9 @@ ROM_nationalize_resita_enterprise:0 "Nationalise the Resita Enterprise"
 ROM_stimulate_the_economy:0 "Stimulate the Economy"
 ROM_improvements_on_fortifications:0 "Getting With the Times"
 ROM_german_food_exports:0 "German Food Exports"
-ROM_1912_naval_program:0 "[GetYear] Naval Program"
-ROM_screening_focus:0 "Focus on Surface Wolves"
-ROM_submarine_focus:0 "Focus on Underwater Snipers"
+ROM_1912_naval_program:0 "Romanian Naval Program"
+ROM_romanian_black_sea_fleet:0 "The Romanian Black Sea Fleet"
+ROM_defend_the_danube:0 "Defend the Danube"
 ROM_law_on_minorities:0 "Romanianization"
 ROM_integration_of_szekelyfold:0 "Integrate [778.GetName]"
 ROM_integration_of_east_alford:0 "Integrate [1020.GetName]"
@@ -509,7 +509,9 @@ ROM_unification_with_moldova:0 "Unification with Moldova"
 ROM_fund_the_viata_romaneasca:0 "Fund the Viata Româneasca"
 ROM_fund_the_viata_romaneasca_desc:0 "The Viata Româneasca is a socialist newspaper co-founded by Constantin Stere, used to promote socialist and poporanist ideals to the readers in Romania and other places. Now that Constantin is in charge of the government, he can fund the newspaper through his occupation."
 ROM_tax_burdens_on_the_rich:0 "Their Fair Share"
+ROM_protect_the_ports:0 "Protect the Ports"
 ## -- TOOLTIPS -- ##
+depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
 ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
@@ -1018,10 +1020,11 @@ ROM_the_natural_enemy_idea:0 "The Natural Enemy"
 ROM_social_welfare_idea:0 "State-Funded Social Welfare"
 ROM_abandon_federalism_idea:0 "Abandon Federalism"
 ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
-ROM_1912_naval_program_idea_screen:0 "Surface Hunters"
-ROM_1912_naval_program_idea_sub:0 "Underwater Sinkers"
+ROM_defense_of_danube:0 "Defense of the Danube River"
+ROM_black_sea_fleet:0 "The Romanian Black Sea Fleet"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
 ROM_recently_raided:0 "Recently Raided"
+
 
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
