--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -607,6 +607,7 @@
  conservative_tt: "§gConservative§!"
  reformist: ""
  reformist_tt: "§CReformist§!"
+ unpopular_autocrat: "Unpopular Autocrat"
  hardline_reformer: "Hardline Reformer"
  grey_eminence: "Grey Eminence"
  penny_pinching_bureaucrat: "Penny-Pinching Bureaucrat"
@@ -627,6 +628,8 @@
 
  #Characters
 
+ RUS_nicholas_II: "Nikolai II"
+ RUS_nicholas_II_desc: "His Imperial Majesty Nikolai II has been ruling Russia from 1894. From the early days of his reign he made clear that, like his father before him, he will defend the Tsar's absolute power, which he believed was the best tool to ensure the well-being of the people. His faith in this was put to the test in 1905, when the same people he swore to protect, unable to endure the living conditions in Russia, rebelled against his rule in what is known as the First Russian Revolution. Nikolai eventually was forced to accept the creation of the State Duma and the Constitution, which limited his absolute authority and made it so that no law could be passed without the consent of the parliament. However, the Emperor was dissatisfied with the first two State Dumas, which were too radical, pushed for too much and refused to compromise with the government. That's when he met Pyotr Stolypin, a staunch reformer who like Nikolai was disillusioned with the parliamentarism, and appointed him as his Prime Minister. Stolypin managed to tame the Duma and pursue necessary reforms. Now, the Emperor stands at the crossroads. Stolypins reforms provided the country with the stability it needed, and now Nikolai can choose - take back his lost powers, maintain the status quo or continue liberalizing the Empire."
  RUS_sergei_kryzhanovsky: "Sergei Kryzhanovsky"
  RUS_pyotr_bark: "Pyotr Bark"
  RUS_pyotr_durnovo: "Pyotr Durnovo"
