OHL Command dynamic modifier

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -456,6 +456,11 @@ ww1_germany_mf:0 "State of the Military Decreased by 5."
 ww1_germany_mt:0 "State of the Military Decreased by 10."
 ww1_germany_mft:0 "State of the Military Decreased by 15."
 
+#OHL Command Tooltips
+GER_establish_the_general_headquarters.tt:0 "Add §YOHL Command§!, which grants (£mobilisation_texticon Mobilization Speed: §G+10.00%§!, £attacker_speed_texticon Divsions Speed: §G+5.00%§!, £defence_core_texticon Divsion Defence on Core Territory §G+5.00%§!)."
+GER_politische_abteilung.tt:0 "Modify §YOHL Command§! by\n£political_power_texticon Daily Political Power Gain: §G+0.10§!\n£stability_texticon Stability §G+10.00%§!"
+GER_operationsabteilung.tt:0 "Modify §YOHL Command§! by\n£supply_consumption_texticon Supply Consumption: §G-10.00%§!\n£construction_speed_milfactory_texticon §YMilitary Factory§! construction speed: §G+5.00%§!"
+
 ww1_germanybundestrat:0 "When passed, the law will have the following effects:"
 
 #Dynamic Modifiers
@@ -464,6 +469,7 @@ GER_new_major_railway_connection:0 "New Major Railway Connection"
 GER_german_migration:0 "German Migration"
 GER_porductional_efficiency:0 "Productional Efficiency"
 GER_solf_new_administration:0 "Solf's New Administration"
+GER_ohl_command:0 "OHL Command"
 
 #Focuses
 
