--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -248,7 +248,7 @@ ROM_the_great_war_redux:0 "The Great War Redux"
 ROM_the_great_war_redux_desc:0 "Once again, France and Germany are engaging in all out war. While the last war between the great powers was contained amongst themselves, this time they're joined by half of the world. With our key position in Europe, its unlikely we can avoid being involved, thus we must consider our options. While the Entente would probably promise the largest land gain, is our army really ready to face Austria? We'd likely have an easier time with the Central Powers, but is it worth abandoning our ambitions on Transylvania for the near future? "
 ROM_our_call_to_arms:0 "Our Call to Arms"
 ROM_our_call_to_arms_desc:0 ""
-ROM_claim_bessarabia:0 "Claim Bessarabia"
+ROM_claim_bessarabia:0 "A War of Liberation"
 ROM_claim_bessarabia_desc:0 "Bessarabia was a core part of the Principality of Moldavia, until it was snatched away by the Russians in 1812. While part of it was regained after the Crimean War, we were forced to cede the land in exchange for recognition of our independence by the Tsar. As an integral part of Moldavia, it is imperative the region is retaken from the Russian yoke."
 ROM_crush_pro_entente_protesters:0 "Crush Pro-Entente Protesters"
 ROM_crush_pro_entente_protesters_desc:0 ""
